models/tests/errors/syntactic/toomanycompositions.ucl
// UCLID TEST
// Solver=z3
// Result=None

type key;
type frame = record {k : key, i : integer, b : boolean, k2: key};

module main
{

    var a : frame;

    invariant couldbe: a.k2 != a.k;
    
    control {
        induction;
        check;
    }
}

type toomany = main || main || main || main || main || main || main || main || main || main;